Fix error on CSS and delete PHP version.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         }
         #frequently-asked-questions {
             float: left;
-            padding: 50px 30px;''
+            padding: 50px 30px;
             width: 100%;
         }
         #frequently-asked-questions h2 {
