--- a/index.html
+++ b/index.html
@@ -130,6 +130,19 @@
             float: left;
             width: 50%;
         }
+        #i-want-a-website .container form input[type="text"],
+        textarea {
+            border: 0;
+            border-radius: 5px;
+            display: block;
+            margin-bottom: 15px;
+            outline: none;
+            padding: 15px;
+            width: 100%;
+        }
+        #i-want-a-website .container form input[type="text"]:active {
+            outline: none;
+        }
         #frequently-asked-questions {
             float: left;
             padding: 50px 30px;
