Fix OpenSans font.

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         }
         @font-face {
             font-family: 'Ostrich Sans';
-            src: url('/assets/OstrichSans-Bold.ttf');
+            src: url('assets/OstrichSans-Bold.otf');
         }
         @font-face {
             font-family: 'Open Sans';
-            src: url('/assets/OpenSans-Regular.ttf');
+            src: url('assets/OpenSans-Regular.ttf');
         }
         * {
             box-sizing: border-box;
