Fix link anchor.

--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                     <ul>
                         <li><a href="#what-is">O que é?</a></li>
                         <li><a href="#how-it-works">Como funciona!</a></li>
-                        <li><a href="#how-it-works">Quero um site!</a></li>
+                        <li><a href="#i-want-a-website">Quero um site!</a></li>
                         <li><a href="#frequently-asked-questions">Dúvidas</a></li>
                     </ul>
                 </div><!-- /.container -->
